posts index page mostly works now just need to make it responsive and allow for the top bar to be fixed without images overlapping.

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -274,7 +274,7 @@ $hr-border-color: black;
 //
 
 // We use these to set the color of the pip in dropdown buttons
-// $dropdown-button-pip-color: #fff;
+ $dropdown-button-pip-color: #a8c6d3;
 // $dropdown-button-pip-color-alt: #333;
 
 // We use these to style tiny dropdown buttons
